2005-02-04  John W. Eaton  <jwe@octave.org>

	* sighandlers.cc (octave_child_list::~octave_child_list): Move here.
	* sighandlers.h: From here.

2005-02-02  John W. Eaton  <jwe@octave.org>

	* Makefile.in (parse.cc): Expect 12 shift/reduce conflicts.
	* parse.y (loop_command): Allow "for (k=1:10) ... endfor".

2005-01-27  David Bateman  <dbateman@free.fr>

	* ov-mapper.cc (octave_mapper::apply): Only work on real arguments
	if c_c_map_fcn or d_d_map_fcn or d_b_map_fcn is defined.xo

2005-01-26  Joel Andersson  <snprintf@gmail.com>

	* help.cc (keywords): Document endswitch.

2005-01-21  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/filter.cc (filter): Avoid slow Marray indexing ops.

2005-01-20  John W. Eaton  <jwe@octave.org>

	* Makefile.in (EXTRAS): Move ov-base-mat.cc ov-base-scalar.cc here.
	(OV_SRC): From here.

2005-01-18  John W. Eaton  <jwe@octave.org>

	* ov-complex.h (octave_complex::any): New function.
	* ov-scalar.h (octave_scalar::any): New function.

	* file-io.cc (Fmkstemp): Fix doc string.  Error message belongs in
	third output value.  From Mats Jansson <mats.e.jansson@home.se>.

2005-01-12  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/find.cc (Ffind): Make it work for character strings.

2005-01-11  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/gplot.l (UNOP): Avoid trailing comment.

2005-01-10  John W. Eaton  <jwe@octave.org>

	* ls-oct-ascii.cc (extract_keyword (std::istream&, const
	string_vector&, std::string&, int&, const bool)):
	Remove duplicate definition.

2004-12-27  Martin Dalecki  <martin@dalecki.de>

	* Cell.cc, c-file-ptr-stream.cc, comment-list.cc, oct-map.cc,
	oct-obj.cc, ov-base.cc, ov-base-int.cc, ov-base-mat.cc,
	ov-base-scalar.cc, ov-bool.cc, ov-bool-mat.cc, ov-builtin.cc,
	ov.cc, ov-cell.cc, ov-ch-mat.cc, ov-colon.cc, ov-complex.cc,
	ov-cs-list.cc, ov-cx-mat.cc, ov-dld-fcn.cc, ov-fcn.cc,
	ov-fcn-handle.cc, ov-fcn-inline.cc, ov-file.cc, ov-int16.cc,
	ov-int32.cc, ov-int64.cc, ov-int8.cc, ov-list.cc, ov-mapper.cc,